--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Marico</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="./assets/img/logo.svg" type="image/x-icon">
+      <link
+         rel="shortcut icon"
+         href="./assets/img/logo.svg"
+         type="image/x-icon" />
+      <link rel="stylesheet" href="./assets/css/style.css" />
+      <link rel="stylesheet" href="./assets/css/output.css" />
    </head>
-   <body></body>
+   <body class="bg-black">
+
+   </body>
 </html>
