feat: add header and give styles to it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,86 @@
       <link rel="stylesheet" href="./assets/css/style.css" />
       <link rel="stylesheet" href="./assets/css/output.css" />
    </head>
-   <body class="bg-black">
+   <body class="bg-black text-white">
+      <header
+         class="bg-black flex sticky top-0 justify-between items-center pt-6 pb-3 px-16 md:pt-8 md:px-24 lg:pt-[46px] lg:px-[140px] lg:mb-32">
+         <a
+            class="group flex items-center md:gap-4 pt-1 pb-2.5"
+            href="./index.html">
+            <img
+               class="group-hover:opacity-80 duration-200 transition-all ease-linear"
+               src="./assets/img/logo.svg"
+               alt="Logo of Marico" />
+            <h1
+               class="text-white font-bold md:font-[800] md:text-4xl group-hover:text-[#3c82f4] duration-200 transition-all ease-linear">
+               Marico
+            </h1>
+         </a>
 
+         <nav
+            class="hidden lg:flex items-center lg:gap-9 md:py-3 text-[#707070] md:text-xl font-bold leading-7">
+            <a
+               class="flex items-center justify-start gap-1 px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
+               href="#">
+               Use Cases
+               <img
+                  class="text-white"
+                  src="./assets/img/arrow-down.svg"
+                  alt="Down arrow" />
+            </a>
+            <a
+               class="px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
+               href="#"
+               >About</a
+            >
+            <a
+               class="active px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
+               href="#"
+               >Pricing</a
+            >
+            <a
+               class="px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
+               href="#"
+               >Blog</a
+            >
+         </nav>
+         <div class="flex items-center gap-6 md:text-xl font-bold leading-7">
+            <a
+               class="px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] text-[#707070] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
+               href="#"
+               >Login</a
+            >
+            <a
+               class="hidden lg:block text-white bg-[#306EF7] md:pt-3 md:pr-5 md:pb-[13px] md:pl-[22px] rounded-md hover:text-[#306EF7] hover:bg-white duration-300 transition-all ease-linear active:scale-90"
+               href="#"
+               >Signup</a
+            >
+            <span
+               class="inline lg:hidden scale-[0.5] hover:opacity-80 cursor-pointer duration-300 transition-all ease-linear">
+               <img class="" src="./assets/img/menu.png" alt="" />
+            </span>
+         </div>
+      </header>
+
+      <main class="py-6 px-16 md:py-8 md:px-24 lg:py-[46px] lg:px-[140px]">
+         <section class="flex flex-col items-center justify-center">
+            <h2
+               class="text-white lg:text-[112px] font-bold text-center mb-20 md:mb-24 lg:mb-[1 36px]">
+               Own your audience.
+               <br />
+               <span class="text-[#FE6783FF]">So you don't lose them.</span>
+            </h2>
+            <h3 class="text-[40px] font-bold">
+               Turn your audience into email and text message subscribers.
+            </h3>
+         </section>
+         <section>
+            <h2>
+               tenetur suscipit nisi facilis, temporibus deserunt illo delectus
+               eaque cum pariatur. Eius voluptatibus tempore ad minima veritatis
+               sit aut a natus?
+            </h2>
+         </section>
+      </main>
    </body>
 </html>
