fix: add alt data to arrow icon in the nav

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <img
                   class="text-white"
                   src="./assets/img/arrow-down.svg"
-                  alt="Down arrow" />
+                  alt="Down arrow icon" />
             </a>
             <a
                class="px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
