--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <header
          class="bg-black flex sticky top-0 justify-between items-center pt-6 pb-3 px-16 md:pt-8 md:px-24 lg:pt-[46px] lg:px-[140px] lg:mb-32">
          <a
-            class="group flex items-center md:gap-4 pt-1 pb-2.5"
+            class="group flex items-center gap-2 md:gap-4 pt-1 pb-2.5"
             href="./index.html">
             <img
                class="group-hover:opacity-80 duration-200 transition-all ease-linear"
                src="./assets/img/logo.svg"
                alt="Logo of Marico" />
             <h1
-               class="text-white font-bold md:font-[800] md:text-4xl group-hover:text-[#3c82f4] duration-200 transition-all ease-linear">
+               class="text-white font-bold md:font-[800] text-4xl group-hover:text-[#3c82f4] duration-200 transition-all ease-linear">
                Marico
             </h1>
          </a>
@@ -73,24 +73,162 @@
          </div>
       </header>
 
-      <main class="py-6 px-16 md:py-8 md:px-24 lg:py-[46px] lg:px-[140px]">
-         <section class="flex flex-col items-center justify-center">
+      <main class="">
+         <section
+            class="flex flex-col items-center justify-center py-6 px-16 md:py-8 md:px-24 lg:py-[46px] lg:px-[140px] mb-28 md:mb-32 lg:mb-[162px]">
             <h2
-               class="text-white lg:text-[112px] font-bold text-center mb-20 md:mb-24 lg:mb-[1 36px]">
+               class="text-white text-5xl md:text-6xl lg:text-[112px] font-bold text-center mb-20 md:mb-24 lg:mb-[136px]">
                Own your audience.
                <br />
                <span class="text-[#FE6783FF]">So you don't lose them.</span>
             </h2>
-            <h3 class="text-[40px] font-bold">
-               Turn your audience into email and text message subscribers.
+            <h3
+               class="text-xl md:text-2xl lg:text-[40px] font-bold text-center mb-8 md:mb-10 lg:mb-[50px]">
+               Turn your audience into email and
+               <br class="hidden md:inline-block" />
+               text message subscribers.
             </h3>
+            <div
+               class="flex flex-col md:flex-row gap-5 md:gap-[26px] mb-3 md:mb-4 lg:mb-5">
+               <button
+                  class="bg-[#326CF9] font-medium text-white text-base leading-7 tracking-normal text-left pt-[15px] pr-[45px] pb-3 pl-[45px] md:pt-[20px] md:pr-[60px] md:pb-4 md:pl-[60px] lg:pt-[23px] lg:pr-[74px] lg:pb-6 lg:pl-[73px] rounded-md transition duration-300 ease-in-out hover:bg-blue-400 active:bg-blue-600">
+                  Get Started Now
+               </button>
+
+               <button
+                  class="font-medium text-[#707070] text-base leading-7 tracking-normal text-left pt-[15px] pr-[45px] pb-3 pl-[45px] md:pt-[20px] md:pr-[60px] md:pb-4 md:pl-[60px] lg:pt-[23px] lg:pr-[74px] lg:pb-6 lg:pl-[73px] border border-[#707070] rounded-md transition duration-300 ease-in-out hover:text-white hover:bg-gray-400 active:bg-gray-500">
+                  View A Demo
+               </button>
+            </div>
+
+            <p
+               class="flex flex-col md:flex-row items-center justify-center gap-2 mb-28 md:mb-32 lg:mb-40">
+               <span class="flex items-center gap-2">
+                  <span
+                     class="w-5 h-5 md:w-6 md:h-6 lg:w-8 lg:h-8 bg-green-500 rounded-full flex items-center justify-center shadow-green-400"></span>
+                  <span
+                     class="text-white font-bold text-2xl md:text-3xl lgtext-5xl leading-9">
+                     1000+
+                  </span>
+               </span>
+               <span
+                  class="text-[#707070] font-normal text-2xl md:text-3xl lg:text-4xl leading-10 tracking-normal text-center">
+                  creators have already started
+               </span>
+            </p>
+            <div class="flex flex-col gap-10 md:gap-12 lg:gap-16">
+               <h2
+                  class="font-semibold text-white text-center text-3xl md:text-4xl lg:text-6xl leading-[112px] tracking-normal">
+                  Why Creators Love Marico
+               </h2>
+               <div class="flex flex-wrap justify-center gap-16 md:gap-20">
+                  <div class="flex flex-col gap-2 items-center">
+                     <span
+                        class="font-semibold text-white text-2xl md:text-2xl lg:text-3xl leading-[52px] tracking-normal">
+                        🙂Reduced Anxiety
+                     </span>
+                     <span
+                        class="font-normal text-[#707070] text-sm md:text-lg lg:text-lg leading-[33px] tracking-normal">
+                        Never worry about losing your audience.
+                     </span>
+                  </div>
+                  <div class="flex flex-col gap-2 items-center">
+                     <span
+                        class="font-semibold text-white text-2xl md:text-2xl lg:text-3xl leading-[52px] tracking-normal">
+                        😄 Lower Workload
+                     </span>
+                     <span
+                        class="text-[#707070] text-sm md:text-lg lg:text-lg leading-[33px] tracking-normal">
+                        Just share one link. We'll handle the rest.
+                     </span>
+                  </div>
+                  <div class="flex flex-col gap-2 items-center">
+                     <span
+                        class="font-semibold text-white text-2xl md:text-2xl lg:text-3xl leading-[52px] tracking-normal">
+                        🥳 More Time
+                     </span>
+                     <span
+                        class="text-[#707070] text-sm md:text-lg lg:text-lg leading-[33px] tracking-normal">
+                        Spend less time on marketing tools
+                     </span>
+                  </div>
+               </div>
+            </div>
          </section>
-         <section>
-            <h2>
-               tenetur suscipit nisi facilis, temporibus deserunt illo delectus
-               eaque cum pariatur. Eius voluptatibus tempore ad minima veritatis
-               sit aut a natus?
-            </h2>
+         <!-- Step 1 -->
+         <section
+            class="py-6 pl-16 md:py-8 md:pl-24 lg:py-[46px] lg:pl-[140px]">
+            <div
+               class="flex flex-col justify-center items-center text-center mb-32 md:mb-36 lg:mb-[189px]">
+               <h4
+                  class="text-[#3D82F2] font-poppins font-semibold text-base lg:text-lg leading-[38px] tracking-normal">
+                  Step 1
+               </h4>
+               <h2
+                  class="text-white font-poppins font-semibold text-5xl md:text-6xl lg:text-[75px] leading-[56px] md:leading-[64px] lg:leading-[112px] tracking-normal mb-7 md:mb-8 lg:mb-10">
+                  Connect Your Content
+               </h2>
+               <p
+                  class="text-gray-700 font-poppins font-normal text-2xl lg:text-4xl leading-7 md:leading-9 lg:leading-[45px] tracking-normal text-center mb-6 md:mb-7 lg:mb-[34px]">
+                  Bring all of your content together and get a Homepage that
+                  <br class="hidden lg:block" />
+                  automatically updates whenever you create anywhere online.
+               </p>
+               <button
+                  class="w-fit font-medium text-[#707070] text-base leading-7 tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 border border-[#707070] rounded-md transition duration-300 ease-in-out hover:text-white hover:bg-gray-400 active:bg-gray-500">
+                  View Avaliable Sources
+               </button>
+            </div>
+
+            <div class="flex flex-col-reverse lg:flex-row">
+               <div class="flex flex-col">
+                  <h3
+                     class="text-white font-poppins font-medium text-lg md:text-2xl lg:text-[30px] leading-[45px] tracking-normal text-left mb-14 md:mb-16 lg:mb-20">
+                     Your Homepage
+                  </h3>
+                  <h2
+                     class="text-white font-poppins font-semibold text-5xl lg:text-6xl leading-[112px] tracking-normal text-left mb-4 md:mb-5 lg:mb-[29px]">
+                     Your Content.
+                     <br />
+                     All in <span class="text-[#3C82F4]">One Spot.</span>
+                  </h2>
+                  <p class="flex gap-3 items-center mb-2 md:mb-3">
+                     <span
+                        class="text-sm md:text-[16px] lg:text-lg rounded-full bg-slate-500 px-2 py-0.5 md:px-3 md:py-1"
+                        >1</span
+                     >
+                     <span
+                        class="font-normal text-sm md:text-lg lg:text-[23px] leading-[34px] tracking-normal text-left"
+                        >Embed content or create something new to share.</span
+                     >
+                  </p>
+                  <p
+                     class="flex gap-3 items-center mb-10 md:mb-14 lg:mb-[66px]">
+                     <span
+                        class="text-sm md:text-[16px] lg:text-lg rounded-full bg-slate-500 px-2 py-0.5 md:px-3 md:py-1"
+                        >2</span
+                     >
+                     <span
+                        class="font-normal text-sm md:text-lg lg:text-[23px] leading-[34px] tracking-normal text-left"
+                        >Share content over email, text message or your
+                        homepage.</span
+                     >
+                  </p>
+                  <div class="flex flex-wrap gap-3 items-center justify-center">
+                     <button
+                        class="w-fit font-medium text-white bg-[#326CF9] text-base leading-7 tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 rounded-md transition duration-300 ease-in-out hover:bg-blue-400 active:bg-blue-600">
+                        Get Started Now
+                     </button>
+                     <button
+                        class="w-fit font-medium text-[#707070] text-base leading-7 tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 border border-[#707070] rounded-md transition duration-300 ease-in-out hover:text-white hover:bg-gray-400 active:bg-gray-500">
+                        View Avaliable Sources
+                     </button>
+                  </div>
+               </div>
+               <div class="">
+                  <img src="./assets/img/Screen.png" alt="" />
+               </div>
+            </div>
          </section>
       </main>
    </body>
