fix: change line-height of the elements in step1 section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
          </section>
          <!-- Step 1 -->
          <section
-            class="py-6 pl-16 md:py-8 md:pl-24 lg:py-[46px] lg:pl-[140px]">
+            class="flex flex-col justify-center mb-11 md:mb-14 lg:mb-[71px]">
             <div
                class="flex flex-col justify-center items-center text-center mb-32 md:mb-36 lg:mb-[189px]">
                <h4
@@ -180,14 +180,15 @@
                </button>
             </div>
 
-            <div class="flex flex-col-reverse lg:flex-row">
+            <div
+               class="flex flex-col-reverse lg:flex-row gap-3 py-6 pl-16 md:py-8 md:pl-24 lg:py-[46px] lg:pl-[140px]">
                <div class="flex flex-col">
                   <h3
-                     class="text-white font-poppins font-medium text-lg md:text-2xl lg:text-[30px] leading-[45px] tracking-normal text-left mb-14 md:mb-16 lg:mb-20">
+                     class="text-white font-poppins font-medium text-lg md:text-2xl lg:text-[30px] leading-5 md:leading-7 lg:leading-[45px] tracking-normal text-left mb-10 md:mb-14 lg:mb-20">
                      Your Homepage
                   </h3>
                   <h2
-                     class="text-white font-poppins font-semibold text-5xl lg:text-6xl leading-[112px] tracking-normal text-left mb-4 md:mb-5 lg:mb-[29px]">
+                     class="text-white font-poppins font-semibold text-5xl lg:text-6xl leading-[54px] md:leading-[68px] lg:leading-[112px] tracking-normal text-left mb-4 md:mb-5 lg:mb-[29px]">
                      Your Content.
                      <br />
                      All in <span class="text-[#3C82F4]">One Spot.</span>
@@ -198,7 +199,7 @@
                         >1</span
                      >
                      <span
-                        class="font-normal text-sm md:text-lg lg:text-[23px] leading-[34px] tracking-normal text-left"
+                        class="font-normal text-sm md:text-lg lg:text-[23px] leading-5 md:leading-6 lg:leading-[34px] tracking-normal text-left"
                         >Embed content or create something new to share.</span
                      >
                   </p>
@@ -214,13 +215,13 @@
                         homepage.</span
                      >
                   </p>
-                  <div class="flex flex-wrap gap-3 items-center justify-center">
+                  <div class="flex flex-wrap gap-3 items-center justify-start">
                      <button
-                        class="w-fit font-medium text-white bg-[#326CF9] text-base leading-7 tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 rounded-md transition duration-300 ease-in-out hover:bg-blue-400 active:bg-blue-600">
+                        class="font-medium text-white bg-[#326CF9] text-base leading-5 md:leading-6 lg:leading-[34px] tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 rounded-md transition duration-300 ease-in-out hover:bg-blue-400 active:bg-blue-600">
                         Get Started Now
                      </button>
                      <button
-                        class="w-fit font-medium text-[#707070] text-base leading-7 tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 border border-[#707070] rounded-md transition duration-300 ease-in-out hover:text-white hover:bg-gray-400 active:bg-gray-500">
+                        class="font-medium text-[#707070] text-base leading-5 md:leading-6 lg:leading-[34px] tracking-normal text-left pt-[15px] px-5 pb-3 md:pt-[20px] md:px-6 md:pb-4 lg:pt-[23px] lg:px-9 lg:pb-6 border border-[#707070] rounded-md transition duration-300 ease-in-out hover:text-white hover:bg-gray-400 active:bg-gray-500">
                         View Avaliable Sources
                      </button>
                   </div>
