fix: add content to alt attributes of img

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             >
             <span
                class="inline lg:hidden scale-[0.5] hover:opacity-80 cursor-pointer duration-300 transition-all ease-linear">
-               <img class="" src="./assets/img/menu.png" alt="" />
+               <img class="" src="./assets/img/menu.png" alt="Menu icon" />
             </span>
          </div>
       </header>
@@ -227,7 +227,9 @@
                   </div>
                </div>
                <div class="">
-                  <img src="./assets/img/Screen.png" alt="" />
+                  <img
+                     src="./assets/img/Screen.png"
+                     alt="The picture of a PC showing Spotify's content" />
                </div>
             </div>
          </section>
