--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="./assets/css/style.css" />
       <link rel="stylesheet" href="./assets/css/output.css" />
    </head>
-   <body class="bg-yellow-500 text-red-400 mb-6">
+   <body class="bg-black text-white mb-6">
       <header
          class="bg-black flex sticky top-0 z-10 justify-between items-center px-4 md:px-10 lg:px-16 pt-6 md:pt-8 lg:pt-10 2xl:pt-[46px] lg:mb-32">
          <a
@@ -29,13 +29,13 @@
          </a>
 
          <nav
-            class="hidden lg:flex items-center lg:gap-9 md:py-3 text-[#707070] md:text-xl font-bold leading-normal">
+            class="nav-bar hidden flex-col lg:flex lg:flex-row lg:items-center lg:gap-9 md:py-3 text-[#707070] md:text-xl font-bold leading-normal">
             <a
                class="flex items-center justify-center gap-1 px-2 py-1 border border-transparent rounded-md border-dashed hover:border-[#3C82F4] hover:text-[#3C82F4] duration-300 transition-all ease-linear"
                href="#">
                Use Cases
                <img
-                  class="hidden md:inline pt-1 text-white w-5 h-5"
+                  class="hidden lg:inline pt-1 text-white w-5 h-5"
                   src="./assets/img/arrow-down.svg"
                   alt="Down arrow icon" />
             </a>
@@ -54,6 +54,11 @@
                href="#"
                >Blog</a
             >
+            <a
+               class="lg:hidden text-[#306EF7] rounded-md hover:text-[#306EF7] hover:bg-white duration-300 transition-all ease-linear active:scale-90"
+               href="#"
+               >Signup</a
+            >
          </nav>
          <div
             class="flex items-center gap-6 md:text-xl font-bold leading-normal">
@@ -68,7 +73,8 @@
                >Signup</a
             >
             <span
-               class="inline lg:hidden scale-[0.5] hover:opacity-80 cursor-pointer duration-300 transition-all ease-linear">
+               id="menu-icon"
+               class="inline lg:hidden scale-[0.5] hover:opacity-80  cursor-pointer duration-300 transition-all ease-linear">
                <img class="" src="./assets/img/menu.png" alt="Menu icon" />
             </span>
          </div>
@@ -479,5 +485,7 @@
             </div>
          </footer>
       </main>
+
+      <script src="./js/main.js"></script>
    </body>
 </html>
