--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             href="./index.html">
             <img
                class="scale-75 md:scale-[0.80] lg:scale-90 2xl:scale-100 group-hover:opacity-80 duration-200 transition-all ease-linear"
-               src="./assets/img/logo.svg"
+               src="assets/img/logo.svg"
                alt="Logo of Marico" />
             <h1
                class="text-white font-bold md:font-[800] text-xl md:text-2xl lg:text-3xl 2xl:text-4xl group-hover:text-[#3c82f4] duration-200 transition-all ease-linear">
@@ -393,7 +393,7 @@
                class="text-white text-center font-semibold text-[40px] md:text-5xl lg:text-6xl 2xl:text-[70px] mb-9 md:mb-10 lg:mb-12 2xl:mb-[52px]">
                Experts agreee
             </h2>
-            <img src="./assets/img/testimonials-marico.png" alt="dsfghfg" />
+            <img src="./assets/img/testimonials-marico.png" alt="testimonials of marico" />
          </section>
 
          <!-- Customers -->
@@ -403,7 +403,7 @@
                We've helped over 1,000 creators' claim control of their
                audience.
             </h2>
-            <img src="./assets/img/customers-pic.png" alt="" />
+            <img src="./assets/img/customers-pic.png" alt="Customers picture" />
          </section>
 
          <!-- Call to Action -->
@@ -411,7 +411,7 @@
             class="flex flex-col justify-start items-center px-4 md:px-10 lg:px-16 mb-24 md:mb-32 lg:mb-[152px] 2xl:mb-[183px]">
             <img
                class="scale-100 w-20 h-20 md:w-28 md:h-28 lg:w-32 lg:h-32 xl:w-36 xl:4-36 2xl:w-40 2xl:h-40 mb-3 md:mb-4 lg:mb-5"
-               src="./assets/./img/logo.svg"
+               src="./assets/img/logo.svg"
                alt="Logo of the Marico co" />
             <h2
                class="text-white font-bold leading-normal m-0 tracking-normal text-[38px] md:text-[68px] lg:text-[83px] 2xl:text-[100px]">
